--- a/Card/index.html
+++ b/Card/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 	<div id="container">
-		<div id="queryBlock">
-			<div id="query">
-				<input type="text" id="inputQuery" placeholder="Search">
-				<button id="buttonQuery"></button>
+		<div class="queryBlock">
+			<div class="query">
+				<input type="text" class="inputQuery" placeholder="Search">
+				<button class="buttonQuery"></button>
 			</div>
 		</div>
-		<div id="cardsBlock">
+		<div class="cardsBlock">
 		</div>
 	</div>
 </body>
